implementing password recovery

--- a/views/email/forgotten_pw.hbs
+++ b/views/email/forgotten_pw.hbs
@@ -3,5 +3,10 @@
     Hi {{name}}!
 </p>
 <p>
-    Someone, hopefully you have requested a new password, here you go: {{newPassword}}
+    Someone, hopefully you have requested a new password. Click on the link below to reset your password.
+</p>
+<p>
+    <a href="https://prompter.me/{{slug}}/{{token}}">
+        reset password
+    </a>
 </p>
