--- a/views/email/forgotten_pw.hbs
+++ b/views/email/forgotten_pw.hbs
@@ -6,7 +6,7 @@
     Someone, hopefully you have requested a new password. Click on the link below to reset your password.
 </p>
 <p>
-    <a href="https://prompter.me/{{slug}}/{{token}}">
+    <a href="https://prompter.me/password/{{slug}}/{{token}}">
         reset password
     </a>
 </p>
